tests/neg/namespace-no-import/main.stk
namespace app

fun main =
  test.double 10 p    // error // error
